Wed Apr 14 18:23:00 2010  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in (signbit): signbit is a macro in C99.

Wed Apr 14 17:56:06 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (io_shift_cbuf): should terminate.
	  http://golf.shinh.org/p.rb?DECimal+number+to+BINary#Ruby

Wed Apr 14 16:29:02 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (GET_STACK_BOUNDS): fixed macro argument names.  a patch from
	  Satoshi Shiba <shiba AT rvm.jp> at [ruby-dev:40973].

	* gc.h (ruby_get_stack_grow_direction): fixed prototype.

	* thread_pthread.c (get_stack, ruby_stack_overflowed_p): both side
	  should be same type.  [Bug #3145]

Wed Apr 14 15:58:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_string_value_cstr): make NUL terminated if it is
	  not done.

Wed Apr 14 12:56:21 2010  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap (encode_utf7): encode & properly.  Thanks, Kengo
	  Matsuyama.  [ruby-dev:38063]

Wed Apr 14 11:39:26 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/lib/syck/basenode.rb (Syck::BaseNode#match_path): fixed
	  library name.

	* ext/syck/lib/yaml/syck.rb: split from ext/syck/lib/syck.rb for
	  backward compatibility.

Wed Apr 14 09:24:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Refix [nkf-bug:21393]. (explicit -X)

Tue Apr 13 20:36:50 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Fix: Windows Codepages wrongly convert
	  Halfwidth Katakana. [nkf-bug:21393]

Tue Apr 13 15:00:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (make_seed_value): fix leading-zero-guard condition on
	  bdigit is smaller than 32bit.

Tue Apr 13 13:57:36 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* lib/irb/completion.rb (CompletionProc): fix [ruby-dev:40953]
	  [Bug #3126]. Thanks Kazuhiro NISHIYAMA.

Tue Apr 13 09:32:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* transcode.c (transcode_loop): insert output the value when